--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,7 +10,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "removeComments": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "paths": {
+      "@configs/*": ["configs/*"]
+    }
   },
   "exclude": ["**/node_modules", "**/.*/"],
   "include": ["src"]
