--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,6 +14,7 @@
     "paths": {
       "@configs/*": ["configs/*"],
       "@databases/*": ["databases/*"],
+      "@middlewares/*": ["middlewares/*"],
       "@utils/*": ["utils/*"]
     }
   },
