Backend-Feat: Create ticket module and validation

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,6 +15,7 @@
       "@configs/*": ["configs/*"],
       "@databases/*": ["databases/*"],
       "@middlewares/*": ["middlewares/*"],
+      "@modules/*": ["modules/*"],
       "@utils/*": ["utils/*"]
     }
   },
