--- a/frontend/tsconfig.paths.json
+++ b/frontend/tsconfig.paths.json
@@ -2,7 +2,15 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
+      "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"],
+      "@components": ["./src/components/index.ts"],
+      "@compounds": ["./src/compounds/index.ts"],
+      "@contexts": ["./src/contexts/index.ts"],
+      "@hooks": ["./src/hooks/index.ts"],
+      "@interfaces": ["./src/interfaces/index.ts"],
+      "@pages": ["./src/pages/index.ts"],
+      "@services": ["./src/services/index.ts"],
+      "@utils/*": ["./src/utils/*"]
     }
   }
 }
