--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -1,28 +1,29 @@
 {
   "name": "nestjs",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "author": "Izak Voigt",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "debug": "nest start --debug --watch",
+    "dev": "nest start --watch",
+    "dev:docker:up": "docker compose --env-file=.env.development up -V --build",
+    "dev:docker:rm": "docker compose --env-file=.env.development rm -s -f -v",
+    "start": "node dist/main",
+    "test:unit": "jest --config ./jest-unit.json --coverage --runInBand",
+    "test:unit:watch": "jest --config ./jest-unit.json --coverage --runInBand --watch"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "helmet": "^7.0.0",
+    "mongoose": "^7.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -30,6 +31,9 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.68",
+    "@swc/jest": "^0.2.26",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -58,7 +62,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.(t|j)s$": "@swc/jest"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
