--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - .:/app
       - /app/node_modules
     env_file:
-      - .env.development
+      - .env
     ports:
       - 3000:3000
     command: npm start
